# BacktesterLib

./: README.md  backtester.py  example.py  pyproject.toml  result.py  strategies.py
backtesterlib/: __init__.py  backtester.py  result.py  strategies.py
