[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backtesterlib"
version = "0.1.0"
description = "A vectorized backtesting library for trading strategies"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Juan Santhosh"}]
license = {text = "MIT"}
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "seaborn"
]

[project.urls]
Homepage = "https://github.com/your-username/backtesterlib"
Repository = "https://github.com/your-username/backtesterlib"

[tool.setuptools]
packages = ["backtesterlib"]
