[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backtesterlib"
version = "0.1.0"
description = "A vectorized backtesting library for trading strategies"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Juan Santhosh"}]
license = {text = "MIT"}
dependencies = [
  "setuptools",
  "numpy",
  "pandas",
  "matplotlib",
  "seaborn"
]

[project.urls]
Homepage = "https://github.com/juan-santhosh/BacktesterLib"
Repository = "https://github.com/juan-santhosh/BacktesterLib"

[tool.setuptools]
packages = ["backtesterlib"]
